--- a/bootstrap/css/bootstrap-custom.css
+++ b/bootstrap/css/bootstrap-custom.css
@@ -1,19 +1,18 @@
-/* header box for front page */
-.header-box{
-	position:relative;
-	padding:200px 15px 100px 15px;
-	margin-bottom: 50px;
-	min-height: 700px;
-	background-color:#336699;
-	/*background-image:-webkit-linear-gradient(top,#563d7c 0,#6f5499 100%);
-	background-image:linear-gradient(to bottom,#563d7c 0,#6f5499 100%);*/
-	/*background-image:linear-gradient(to bottom,#000000 0,#373737 100%);*/
-	background-image:linear-gradient(to bottom,#003366 0,#336699 100%);
-	background-repeat:repeat-x;
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#003366', endColorstr='#336699', GradientType=0)
+body {
+  padding-top: 50px;
 }
 
-.header-box-short{
+/* header box for front page */
+.header-box{
+	padding: 40px 15px;
+}
+
+.header-box-left{
+	padding: 40px 15px;
+	text-align: left;
+}
+
+.header-box-short {
 	position:relative;
 	padding:100px 15px 15px 15px;
 	margin-bottom: 50px;
@@ -24,6 +23,22 @@
 	background-image:linear-gradient(to bottom,#003366 0,#336699 100%);
 	background-repeat:repeat-x;
 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#003366', endColorstr='#336699', GradientType=0)
+}
+
+.navbar .navbar-nav > .dropdown-primary {
+  
+}
+.navbar .navbar-nav > li.dropdown-primary > a {
+  color: #ffffff;
+  font-weight: bold;
+  background-color: #428bca;
+}
+
+.navbar .navbar-nav > .open.dropdown-primary > a,
+.navbar .navbar-nav > .open.dropdown-primary > a:hover,
+.navbar .navbar-nav > .open.dropdown-primary > a:focus {
+  color: #ffffff;
+  background-color: #3071a9;
 }
 
 .container-full {
