--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,15 @@
         </li>
         <li><a href="demo.html">Demo</a></li>
         <li><a href="examples.html">Examples</a></li>
-        <li><a href="docs.html">Docs</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Docs <b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <li><a href="about.html">About</a></li>
+            <li><a href="components.html">Components</a></li>
+            <li><a href="features.html">Main Features</a></li>
+            <li><a href="security.html">Security Features</a></li>
+          </ul>
+        </li>
         <li><a href="contributors.html">Contributors</a></li>
         </ul>
       <ul class="nav navbar-nav navbar-right">  
