--- a/bootstrap/css/bootstrap-custom.css
+++ b/bootstrap/css/bootstrap-custom.css
@@ -12,17 +12,8 @@ body {
 	text-align: left;
 }
 
-.header-box-short {
-	position:relative;
-	padding:100px 15px 15px 15px;
-	margin-bottom: 50px;
-	background-color:#336699;
-	/*background-image:-webkit-linear-gradient(top,#563d7c 0,#6f5499 100%);
-	background-image:linear-gradient(to bottom,#563d7c 0,#6f5499 100%);*/
-	/*background-image:linear-gradient(to bottom,#000000 0,#373737 100%);*/
-	background-image:linear-gradient(to bottom,#003366 0,#336699 100%);
-	background-repeat:repeat-x;
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#003366', endColorstr='#336699', GradientType=0)
+.header-menu {
+padding: 10px 0px 0px 0px;
 }
 
 .navbar .navbar-nav > .dropdown-primary {
