--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,12 +17,18 @@
         <li><a href="demo.html">Demo</a></li>
         <li><a href="examples.html">Examples</a></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Docs <b class="caret"></b></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Features <b class="caret"></b></a>
           <ul class="dropdown-menu">
             <li><a href="about.html">About</a></li>
             <li><a href="components.html">Components</a></li>
             <li><a href="features.html">Main Features</a></li>
             <li><a href="security.html">Security Features</a></li>
+          </ul>
+        </li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Documentation <b class="caret"></b></a>
+          <ul class="dropdown-menu">        
+            <li><a href="backend-api.html">Backend API</a></li>
           </ul>
         </li>
         <li><a href="contributors.html">Contributors</a></li>
