--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,7 +28,8 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Documentation <b class="caret"></b></a>
           <ul class="dropdown-menu">        
-            <li><a href="backend-api.html">Backend API</a></li>
+            <li><a href="backend-api.html">Backend AJAX API</a></li>
+            <li><a href="forms-api.html">Forms API</a></li>
           </ul>
         </li>
         <li><a href="contributors.html">Contributors</a></li>
