Upgrade bootsole and add bootstrapradio

--- a/css/bootstrap-custom.css
+++ b/css/bootstrap-custom.css
@@ -8,6 +8,12 @@
     cursor: pointer;
 }
 
+/* Use to collapse empty button columns */
+
 .hideable {
     min-height: 0px;
+}
+
+label.label-switch {
+    margin-top: 5px;
 }
