--- a/css/sb-admin-master.css
+++ b/css/sb-admin-master.css
@@ -167,6 +167,7 @@ table.tablesorter thead tr th:hover {
 .navbar-inverse {
   color: #ffffff;
   background-color: #d9534f;
+  border: none;
 }
 
 .navbar-inverse .navbar-brand {
