--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,6 +27,7 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Documentation <b class="caret"></b></a>
           <ul class="dropdown-menu">        
+            <li><a href="tutorials.html">Tutorials and Help</a></li>
             <li><a href="backend-api.html">Backend AJAX API</a></li>
             <li><a href="forms-api.html">Forms API</a></li>
           </ul>
