--- a/userfrosting/templates/pages/public/login.html
+++ b/userfrosting/templates/pages/public/login.html
@@ -61,7 +61,7 @@
               data: serializedData       
             }).done(function(data, statusText, jqXHR) {
                 // Forward to account home page on success
-                window.location.replace("{{userfrosting.uri.public}}/account/");
+                window.location.replace("{{userfrosting.uri.public}}/account");
             }).fail(function(jqXHR) {
                 console.log("Error (" + jqXHR.status + "): " + jqXHR.responseText );
                 console.log("Public root URI is " + userfrosting.uri.public);
