--- a/userfrosting/templates/common/forgot-password.html
+++ b/userfrosting/templates/common/forgot-password.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-  {% include 'pages/public/components/head.html' %}
+  {% include 'common/components/head.html' %}
   <body>
     <div class="container">
-      {% include 'pages/public/components/main-nav.html' %}
+      {% include 'common/components/main-nav.html' %}
       <div class="jumbotron">
         <h1>Reset Password</h1>
         {% if (confirm_ajax == 0) %}
@@ -57,7 +57,7 @@
         </form>
       </div>	
     </div> <!-- /container -->
-    {% include 'pages/public/components/footer.html' %}	
+    {% include 'common/components/footer.html' %}	
 
 </div> <!-- /container -->
 <script>
