--- a/userfrosting/templates/common/resend-activation.html
+++ b/userfrosting/templates/common/resend-activation.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-  {% include 'pages/public/components/head.html' %}
+  {% include 'common/components/head.html' %}
   <body>
     <div class="container">
-      {% include 'pages/public/components/main-nav.html' %}
+      {% include 'common/components/main-nav.html' %}
       <div class="jumbotron">
         <h1>Account Activation</h1>
         <p class="lead">Please enter your username and the email address you used to sign up, and an activation email will be resent.</p> 
@@ -30,7 +30,7 @@
 		  </div>
 		</form>
       </div>	
-      {% include 'pages/public/components/footer.html' %}	
+      {% include 'common/components/footer.html' %}	
 
     </div> <!-- /container -->
 
