--- a/userfrosting/templates/common/404.html
+++ b/userfrosting/templates/common/404.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  {% include 'pages/public/components/head.html' %}
+  {% include 'common/components/head.html' %}
   <body>
     <div class="container text-center">
         <h1>Error 404</h1>
@@ -8,6 +8,6 @@
         <br><br>
         <p class="lead">Either way, click <a href="{{userfrosting.uri.public}}">here</a> to return to the front page.</p>
     </div> <!-- /container -->
-    {% include 'pages/public/components/footer.html' %}	
+    {% include 'common/components/footer.html' %}	
   </body>
 </html>
