--- a/userfrosting/templates/common/home.html
+++ b/userfrosting/templates/common/home.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-  {% include 'pages/public/components/head.html' %}
+  {% include 'common/components/head.html' %}
   <body>
     <div class="container">
-        {% include 'pages/public/components/main-nav.html' %}
+        {% include 'common/components/main-nav.html' %}
       <div class="jumbotron">
         <h1>Welcome to UserFrosting!</h1>
         <p class="lead">A secure, modern user management system based on UserCake, jQuery, and Bootstrap.</p>
@@ -12,9 +12,9 @@
               <a href="{{userfrosting.uri.public}}/account/login" class="btn btn-success" role="button" value="Login">Login</a>
             </div>
         </div>
-        {% include 'pages/public/components/jumbotron-links.html' %}	
+        {% include 'common/components/jumbotron-links.html' %}	
       </div>	
     </div> <!-- /container -->
-    {% include 'pages/public/components/footer.html' %}	
+    {% include 'common/components/footer.html' %}	
   </body>
 </html>
