--- a/userfrosting/templates/themes/default/components/head.html
+++ b/userfrosting/templates/themes/default/components/head.html
@@ -13,6 +13,9 @@
       <link rel="stylesheet" href="{{userfrosting.uri.css}}{{item}}" type="text/css" >
     {% endfor %}
     
+    <!-- Theme stylesheet -->
+    <link rel="stylesheet" href="{{userfrosting.uri.css}}theme.css" type="text/css" >
+    
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
