Load theme on login

--- a/userfrosting/templates/themes/root/css/theme.css
+++ b/userfrosting/templates/themes/root/css/theme.css
@@ -6,7 +6,7 @@ body {
   width: 100%;
 }
 #page-wrapper {
-  padding: 70px 15px;
+  padding: 105px 15px;
   min-height: 568px;
   background-color: white;
 }
@@ -14,7 +14,7 @@ body {
   #page-wrapper {
     position: inherit;
     margin: 0 0 0 250px;
-    padding: 30px 30px;
+    padding: 60px 30px 30px 30px;
     border-left: 1px solid #eeeeee;
   }
 }
