--- a/userfrosting/templates/themes/default/menus/sidebar.html
+++ b/userfrosting/templates/themes/default/menus/sidebar.html
@@ -12,12 +12,12 @@
             <!-- /input-group -->
         </li>
         <li>
-            <a href="{{userfrosting.uri.public}}/account"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
+            <a href="{{userfrosting.uri.public}}/dashboard"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
         </li>
         
         {% if checkAccess('uri_zerg') %}
         <li>
-            <a href="{{userfrosting.uri.public}}/account/zerg"><i class="sc sc-zerg fa fa-fw"></i> Zerg</a>
+            <a href="{{userfrosting.uri.public}}/zerg"><i class="sc sc-zerg fa fa-fw"></i> Zerg</a>
         </li>
         {% endif %}
         {% if checkAccess('uri_users') %}
