--- a/userfrosting/templates/common/login.html
+++ b/userfrosting/templates/common/login.html
@@ -17,12 +17,12 @@
                     </div>
               </div>
               <div class="col-md-offset-3 col-md-6">
-                <div class="form-group   ">
+                <div class="form-group">
                     <input type="password" class="form-control " name="password" autocomplete="off" value="" placeholder="Password"   >
                 </div>
               </div>
               <div class="col-md-12">
-                <button type="submit" class="btn btn-success  "  data-loading-text="Please wait..." >
+                <button type="submit" class="btn btn-success"  data-loading-text="Please wait..." >
                     Login
                 </button>
               </div>
@@ -34,8 +34,7 @@
     {% include 'common/components/footer.html' %}	
     <script>
         $(document).ready(function() {            
-          // Process form     
-
+          // Process form 
           $("form[name='login']").formValidation({
             framework: 'bootstrap',
             // Feedback icons
@@ -61,13 +60,12 @@
               data: serializedData       
             }).done(function(data, statusText, jqXHR) {
                 // Forward to account home page on success
-                window.location.replace("{{userfrosting.uri.public}}");
+                window.location.replace(userfrosting.uri.public);
             }).fail(function(jqXHR) {
                 if (userfrosting['debug'] == true) {
                     document.body.innerHTML = jqXHR.responseText;
                 } else {
                     console.log("Error (" + jqXHR.status + "): " + jqXHR.responseText );
-                    console.log("Public root URI is " + userfrosting.uri.public);
                     // Display errors on failure
                     $('#userfrosting-alerts').flashAlerts().done(function() {
                         // Re-enable submit button
