Add groups on registration

--- a/userfrosting/templates/common/register.html
+++ b/userfrosting/templates/common/register.html
@@ -17,7 +17,7 @@
                         <div class="col-sm-8">
                             <div class="input-group">
                                 <span class="input-group-addon"><i class="fa fa-fw fa-edit"></i></span>
-                                <input type="text" class="form-control" name="user_name" autocomplete="off" value="derp" placeholder="User name">
+                                <input type="text" class="form-control" name="user_name" autocomplete="off" value="" placeholder="User name">
                             </div>
                         </div>
                     </div>
@@ -30,7 +30,7 @@
                         <div class="col-sm-8">
                             <div class="input-group">
                                 <span class="input-group-addon"><i class="fa fa-fw fa-edit"></i></span>
-                                <input type="text" class="form-control" name="display_name" autocomplete="off" value="derp" placeholder="Display name">
+                                <input type="text" class="form-control" name="display_name" autocomplete="off" value="" placeholder="Display name">
                             </div>
                         </div>
                     </div>
@@ -43,7 +43,7 @@
                         <div class="col-sm-8">
                             <div class="input-group">
                                 <span class="input-group-addon"><i class="fa fa-fw fa-envelope"></i></span>
-                                <input type="text" class="form-control" name="email" placeholder="Email address" value="derp@derp.com">
+                                <input type="text" class="form-control" name="email" placeholder="Email address" value="">
                             </div>
                         </div>
                     </div>
@@ -56,7 +56,7 @@
                         <div class="col-sm-8">
                             <div class="input-group">
                                 <span class="input-group-addon"><i class="fa fa-fw fa-key"></i></span>
-                                <input type="password" class="form-control" name="password" autocomplete="off" value="buttbutt" placeholder="8-50 characters">
+                                <input type="password" class="form-control" name="password" autocomplete="off" value="" placeholder="8-50 characters">
                             </div>
                         </div>
                     </div>
@@ -69,7 +69,7 @@
                         <div class="col-sm-8">
                             <div class="input-group">
                                 <span class="input-group-addon"><i class="fa fa-fw fa-key"></i></span>
-                                <input type="password" class="form-control" name="passwordc" autocomplete="off" value="buttbutt" placeholder="Re-enter your password">
+                                <input type="password" class="form-control" name="passwordc" autocomplete="off" value="" placeholder="Re-enter your password">
                             </div>
                         </div>
                     </div>
