--- a/userfrosting/templates/themes/default/menus/topbar.html
+++ b/userfrosting/templates/themes/default/menus/topbar.html
@@ -191,7 +191,7 @@
     <!-- /.dropdown -->
     <li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-            <i class="fa fa-user fa-fw"></i> {{user.user_name}} <i class="fa fa-caret-down"></i>
+            <i class="{{ user.icon }} fa-fw"></i> {{user.user_name}} <i class="fa fa-caret-down"></i>
         </a>
         <ul class="dropdown-menu dropdown-user">
             <li><a href="{{userfrosting.uri.public}}/account/settings"><i class="fa fa-gear fa-fw"></i> Settings</a>
