--- a/userfrosting/templates/common/home.html
+++ b/userfrosting/templates/common/home.html
@@ -9,7 +9,7 @@
         <p class="lead">A secure, modern user management system based on UserCake, jQuery, and Bootstrap.</p>
         <div class="row">
             <div class="col-sm-12">
-              <a href="{{userfrosting.uri.public}}/account/login" class="btn btn-success" role="button" value="Login">Login</a>
+              <a href="{{site.uri.public}}/account/login" class="btn btn-success" role="button" value="Login">Login</a>
             </div>
         </div>
         {% include 'common/components/jumbotron-links.html' %}	
