--- a/userfrosting/templates/common/components/main-nav.html
+++ b/userfrosting/templates/common/components/main-nav.html
@@ -1,5 +1,5 @@
 {% set navigation_bar = [['', 'Home'], ['account/login', 'Login']] %}
-{% set can_register = userfrosting.can_register|default(false) %}
+{% set can_register = site.can_register|default(false) %}
 {% if can_register %}
     {% set navigation_bar = navigation_bar|merge([['account/register', 'Register']])  %}
 {% endif%}
@@ -9,10 +9,10 @@
     <ul class="nav navbar-nav nav-pills pull-right" id="navigation">
     {% for item in navigation_bar %}
     <li{% if item[0] == active_page %} class="active"{% endif%}>
-        <a role="menuitem" href="{{userfrosting.uri.public}}/{{item[0]}}">{{item[1]}}</a>
+        <a role="menuitem" href="{{site.uri.public}}/{{item[0]}}">{{item[1]}}</a>
     </li>
     {% endfor %}    
     </ul>
-    <h3 class="text-muted">{{userfrosting.site_title}}</h3>
+    <h3 class="text-muted">{{site.site_title}}</h3>
 </div>
 {% endblock %}
