--- a/userfrosting/templates/common/login.html
+++ b/userfrosting/templates/common/login.html
@@ -8,12 +8,12 @@
         <h1>Welcome to UserFrosting!</h1>
         <p class="lead">Please sign in.</p>
         {% include 'common/components/alerts.html' %}
-        <form name="login" method="post" action="{{userfrosting.uri.public}}/account/login" class="form-horizontal">
+        <form name="login" method="post" action="{{site.uri.public}}/account/login" class="form-horizontal">
             {% include 'common/components/csrf.html' %}
             <div class="row">
               <div class="col-md-offset-3 col-md-6">
                     <div class="form-group">
-                        <input type="text" class="form-control " name="user_name" autocomplete="off" value="" placeholder="{{ (userfrosting.email_login == 1) ? 'Username or Email' : 'Username' }}"   >
+                        <input type="text" class="form-control " name="user_name" autocomplete="off" value="" placeholder="{{ (site.email_login == 1) ? 'Username or Email' : 'Username' }}"   >
                     </div>
               </div>
               <div class="col-md-offset-3 col-md-6">
@@ -60,7 +60,7 @@
               data: serializedData       
             }).done(function(data, statusText, jqXHR) {
                 // Forward to account home page on success
-                window.location.replace(userfrosting.uri.public);
+                window.location.replace(site.uri.public);
             }).fail(function(jqXHR) {
                 if (userfrosting['debug'] == true) {
                     document.body.innerHTML = jqXHR.responseText;
