--- a/userfrosting/templates/themes/default/components/footer.html
+++ b/userfrosting/templates/themes/default/components/footer.html
@@ -5,7 +5,7 @@
     </p>
   </div>
 </footer>
-<script src="{{userfrosting.uri.js}}config.js" ></script>
+<script src="{{site.uri.js}}config.js" ></script>
 {% for item in page.schema.js %}
-  <script src="{{userfrosting.uri.js}}{{item}}" ></script>
+  <script src="{{site.uri.js}}{{item}}" ></script>
 {% endfor %}
