--- a/userfrosting/templates/themes/default/menus/sidebar.html
+++ b/userfrosting/templates/themes/default/menus/sidebar.html
@@ -12,17 +12,17 @@
             <!-- /input-group -->
         </li>
         <li>
-            <a href="{{userfrosting.uri.public}}/dashboard"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
+            <a href="{{site.uri.public}}/dashboard"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
         </li>
         
         {% if checkAccess('uri_zerg') %}
         <li>
-            <a href="{{userfrosting.uri.public}}/zerg"><i class="sc sc-zerg fa fa-fw"></i> Zerg</a>
+            <a href="{{site.uri.public}}/zerg"><i class="sc sc-zerg fa fa-fw"></i> Zerg</a>
         </li>
         {% endif %}
         {% if checkAccess('uri_users') %}
         <li>
-            <a href="{{userfrosting.uri.public}}/user/list"><i class="fa fa-users fa-fw"></i> Users</a>
+            <a href="{{site.uri.public}}/user/list"><i class="fa fa-users fa-fw"></i> Users</a>
         </li>
         {% endif %}
     
@@ -32,12 +32,12 @@
             <ul class="nav nav-second-level">
                 {% if checkAccess('uri_site_settings') %}
                 <li>
-                    <a href="{{userfrosting.uri.public}}/config/settings"><i class="fa fa-globe fa-fw"></i> Site Settings</a>
+                    <a href="{{site.uri.public}}/config/settings"><i class="fa fa-globe fa-fw"></i> Site Settings</a>
                 </li>
                 {% endif %}
                 {% if checkAccess('uri_manage_groups') %}
                 <li>
-                    <a href="{{userfrosting.uri.public}}/group/list"><i class="fa fa-tags fa-fw"></i> Groups</a>
+                    <a href="{{site.uri.public}}/group/list"><i class="fa fa-tags fa-fw"></i> Groups</a>
                 </li>
                 {% endif %}
             </ul>
