--- a/userfrosting/templates/themes/default/menus/topbar.html
+++ b/userfrosting/templates/themes/default/menus/topbar.html
@@ -194,10 +194,10 @@
             <i class="{{ user.icon }} fa-fw"></i> {{user.user_name}} <i class="fa fa-caret-down"></i>
         </a>
         <ul class="dropdown-menu dropdown-user">
-            <li><a href="{{userfrosting.uri.public}}/account/settings"><i class="fa fa-gear fa-fw"></i> Settings</a>
+            <li><a href="{{site.uri.public}}/account/settings"><i class="fa fa-gear fa-fw"></i> Settings</a>
             </li>
             <li class="divider"></li>
-            <li><a href="{{userfrosting.uri.public}}/account/logout"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+            <li><a href="{{site.uri.public}}/account/logout"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
             </li>
         </ul>
         <!-- /.dropdown-user -->
