--- a/userfrosting/templates/themes/nyx/components/nav-account.html
+++ b/userfrosting/templates/themes/nyx/components/nav-account.html
@@ -7,7 +7,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="{{userfrosting.uri.public}}">{{userfrosting.site_title}}</a>
+        <a class="navbar-brand" href="{{site.uri.public}}">{{site.site_title}}</a>
     </div>
     <!-- /.navbar-header -->
     {% include 'menus/topbar.html' %}
