--- a/userfrosting/templates/common/home.html
+++ b/userfrosting/templates/common/home.html
@@ -7,6 +7,7 @@
       <div class="jumbotron">
         <h1>Welcome to UserFrosting!</h1>
         <p class="lead">A secure, modern user management system based on UserCake, jQuery, and Bootstrap.</p>
+        {% include 'common/components/alerts.html' %}
         <div class="row">
             <div class="col-sm-12">
               <a href="{{site.uri.public}}/account/login" class="btn btn-success" role="button" value="Login">Login</a>
